# SkyThought

./: README.md  pyproject.toml
examples/: evaluate.ipynb
recipes/sky-t1-7b/: README.md
recipes/sky-t1-preview/: README.md  postprocess.py  preprocess.py  prompts.py  recipe.py
skythought/evals/: README.md  cli.py  inference_and_check.py
skythought/evals/common/: entities.py
skythought/evals/scoring/: __init__.py  base.py  gsm8k.py  ifeval.py  math.py
skythought/evals/scoring/apps/: __init__.py  apps.py
skythought/evals/scoring/ifeval/: __init__.py  ifeval.py  instructions.py
skythought/evals/scoring/livecodebench/: __init__.py  livecodebench.py  livecodebench_util.py
skythought/evals/scoring/processors/: __init__.py  base.py  llm_judge.py
skythought/evals/scoring/taco/: __init__.py  taco.py
skythought/evals/scoring/utils/: ifeval_utils.py
skythought/evals/tasks/apps/: apps_handler.py
skythought/evals/tasks/livecodebench/: livecodebench_handler.py
skythought/evals/tasks/numina/: numina_handler.py
skythought/evals/tasks/taco/: taco_handler.py
skythought/skythought_evals/: README.md  cli.py  eval.py  inference_and_check.py
skythought/skythought_evals/batch/: tokenizer.py
skythought/skythought_evals/common/: constants.py  entities.py  parse_list.py
skythought/skythought_evals/models/: base.py  model_configs.yaml
skythought/skythought_evals/ray_configs/: ray_config.yaml
skythought/skythought_evals/tasks/: base.py
skythought/skythought_evals/tasks/aime/: aime24.yaml  aime24_sky.yaml  aime_handler.py
skythought/skythought_evals/tasks/apps/: apps_handler.py
skythought/skythought_evals/tasks/arc/: arc_handler.py
skythought/skythought_evals/tasks/gpqa_diamond/: gpqa_diamond_handler.py
skythought/skythought_evals/tasks/gsm8k/: gsm8k_handler.py
skythought/skythought_evals/tasks/livecodebench/: livecodebench_handler.py
skythought/skythought_evals/tasks/math/: math_handler.py
skythought/skythought_evals/tasks/mmlu/: mmlu_handler.py
skythought/skythought_evals/tasks/numina/: numina_handler.py
skythought/skythought_evals/tasks/taco/: taco_handler.py
skythought/skythought_evals/util/: cli_util.py  metrics.py  response.py
skythought/tools/: README.md  solution_rewrite.py
skythought/tools/util/: model_utils.py
skythought/tools/util/math/: testing_util.py
tests/evals/: test_cli.py
tests/evals/scoring/taco/: test_taco.py
tests/evals/util/: test_cli_util.py  test_math_parsing.py
