[project]
name = "skythought"
version = "0.1.0rc0"
description = "Skythought Evals: Evaluation and Data Generation Tools for Reasoning Models"
authors = [
    { name = "NovaSky Team" }
]
requires-python = ">=3.9,<3.11"
dependencies = [
    "vllm==0.7.0",
    "pyext",
    "word2number",
    "scipy",
    "datasets",
    "latex2sympy2",
    "pydantic",
    "setuptools",
    "typer",
]
license = { file = "LICENSE" }
readme = "README.md"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true  # Ensures package_data is included in wheel

[tool.setuptools.packages.find]
where = ["."]
include = [
    "skythought",          # top-level package
    "skythought.evals*"    # subpackage(s) under skythought/evals
]

[tool.setuptools.package-data]
skythought = ["evals/**/*.yaml", "evals/**/*.yml"]

[project.scripts]
skythought = "skythought.evals.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "black", "ruff", "pre-commit"]
